# cookiecutter

./: README.md  cookiecutter.json  renovate.json
precommit/: cookiecutter.json
precommit/{{cookiecutter.project_slug}}/: .gitattributes  .pre-commit-config.yaml  .pre-commit-hooks.yaml  CITATION.cff  Makefile  README.md  pyproject.toml
precommit/{{cookiecutter.project_slug}}/.github/: CODEOWNERS
precommit/{{cookiecutter.project_slug}}/.github/workflows/: codeql-analysis.yml  continous-integration.yml  create-release.yml
precommit/{{cookiecutter.project_slug}}/tests/: hook_test.py
precommit/{{cookiecutter.project_slug}}/{{cookiecutter.module_name}}/: hook.py
pyscript/: cookiecutter.json
pyscript/{{cookiecutter.project_slug}}/: .github  .gitignore  .python-version  CITATION.cff  README.md  pyproject.toml  renovate.json  tox.ini
pyscript/{{cookiecutter.project_slug}}/tests/: task_test.py
pyscript/{{cookiecutter.project_slug}}/{{cookiecutter.module_name}}/: task.py
templates/: .gitignore  .pre-commit-config.yaml  LICENSE
templates/.github/workflows/: continous-integration.yml  create-release.yml
